--- a/html/configuracoes-doador.html
+++ b/html/configuracoes-doador.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Novo Começo</title>
+    <title>Novo Começo - Configurações</title>
+    <link rel="shortcut icon" href="../assets/logo.png" type="Alegrinho">
     <link rel="stylesheet" href="../css/global.css">
-    <link rel="stylesheet" href="../css/config.css">
+    <link rel="stylesheet" href="../css/configuracoes.css">
+    <link rel="stylesheet" href="../css/configuracoes-doador.css">
 </head>
-
 <body>
-    <header>
+    <!-- Cabeçalho -->
+    <header>  
         <nav class="navbar nav-lg-screen" id="navbar">
             <button class="btn-icon-header" onclick="toggleSideBar()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-list"
@@ -19,80 +21,86 @@
                 </svg>
             </button>
             <div>
-                <img class="img-logo" id="logo" src="../assets/logo.png" alt="Logo">
+                <img class="img-logo" id="logo" src="../assets/logo.png" alt="Logo da Novo Começo">
             </div>
             <div class="nav-links" id="nav-links">
                 <ul>
                     <li>
                         <button class="btn-icon-header" onclick="toggleSideBar()">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
-                                class="bi bi-x" viewBox="0 0 16 16">
-                                <path
-                                    d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708" />
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                                <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708" />
                             </svg>
                         </button>
                     </li>
                     <li class="nav-link"><a href="../html/index.html">HOME</a></li>
-                    <li class="nav-link"><a href="../html/queroDoar.html">ONG'S</a></li>
-                    <li class="nav-link"><a href="../html/quemSomos.html">SOBRE</a></li>
+                    <li class="nav-link"><a href="../html/pagina-quero-doar.html">ONG'S</a></li>
+                    <li class="nav-link"><a href="../html/sobre.html">SOBRE</a></li>
                     <li class="nav-link"><a href="../html/contato.html">CONTATO</a></li>
-                    <li class="nav-link btn-login"><a href="../html/login.html">LOGIN</a></li>
+                    <li class="nav-link"><a href="../html/login.html">LOGIN</a></li>
                 </ul>
             </div>
             <div class="user">
-                <a href="../html/login.html">
+                <a href="../html/configuracoes-doador.html">
                     <img class="img-user" src="../assets/user.png" alt="Usuário">
                 </a>
             </div>
         </nav>
     </header>
-    <div class="container">
+
+    <!-- Conteúdo Principal -->
+    <main class="container">
         <h1 class="title">Configurações</h1>
-        <div class="donation-box">
+
+        <!-- Detalhes do Usuário -->
+        <section class="donation-box">
             <div class="circle">
                 <p>FOTO</p>
             </div>
             <div class="donation-details">
-                <p>Usuário: Nome do Usuário</p>
-                <p>Email: exemplo@dominio.com</p>
-                <p>CPF/CNPJ: 000.000.000-00</p>
+                <p><strong>Usuário:</strong> Nome do Usuário</p>
+                <p><strong>E-mail:</strong> exemplo@dominio.com</p>
+                <p><strong>CPF:</strong> 000.000.000-00</p>
             </div>
-        </div>
+        </section>
 
+        <!-- Ações do Usuário -->
         <div class="action-buttons">
-            <button class="action-button" onclick="window.location.href='mudar_senha.html'">Mudar senha</button>
-            <button class="action-button" onclick="window.location.href='excluir_conta.html'">Excluir Conta</button>
+            <button class="action-button" onclick="window.location.href='alterar-senha-doador.html'">Alterar Senha</button>
+            <button class="action-button" onclick="window.location.href='infidelizacao-doador.html'">Excluir Conta</button>
+            <button class="action-button" onclick="window.location.href='historico-doacao-doador.html'">Histórico Doações</button>
         </div>
-    </div>
+    </main>
+
+    <!-- Rodapé -->
     <footer>
         <div class="footer">
             <div class="img-footer-start">
-                <img class="boneco-footer" class="img-footer" src="../assets/img-footer.png">
+                <img class="boneco-footer img-footer" src="../assets/img-footer.png" alt="Boneco do rodapé">
             </div>
             <div class="socias">
                 <div class="icons-col-1">
                     <div class="social-footer">
-                        <img class="icon-footer" src="../assets/google.png"> 
+                        <img class="icon-footer" src="../assets/google.png" alt="Google"> 
                         <p>novocomeço@gmail.com</p>
                     </div>
                     <div class="social-footer">
-                        <img class="icon-footer" src="../assets/instagram.png">
+                        <img class="icon-footer" src="../assets/instagram.png" alt="Instagram">
                         <p>@novocomeço</p>
                     </div>
                 </div>
                 <div class="icons-col-2">
                     <div class="social-footer">
-                        <img class="icon-footer" src="../assets/whatsapp.png">
-                        <p>(41)99997676</p>
+                        <img class="icon-footer" src="../assets/whatsapp.png" alt="Whatsapp">
+                        <p>(41) 99997-6767</p>
                     </div>
                     <div class="social-footer">
-                        <img class="icon-footer" src="../assets/facebook.png">
+                        <img class="icon-footer" src="../assets/facebook.png" alt="Facebook">
                         <p>@novocomeco</p>
                     </div>
                 </div>
             </div>
             <div class="img-footer-end">
-                <img class="boneco-footer" class="img-footer" src="../assets/img-footer.png">
+                <img class="boneco-footer img-footer" src="../assets/img-footer.png" alt="Boneco do rodapé">
             </div>
         </div>
     </footer>
