--- a/html/realizar-pagamento.html
+++ b/html/realizar-pagamento.html
@@ -2,11 +2,12 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Novo Começo</title>
+    <link rel="shortcut icon" href="../assets/logo.png" type="Alegrinho">
     <link rel="stylesheet" href="../css/global.css">
-    <link rel="stylesheet" href="../css/quemSomos.css">
+    <link rel="stylesheet" href="../css/realizar-pagamento.css">
+
 </head>
 <body>
     <header>
@@ -33,59 +34,46 @@
                         </button>
                     </li>
                     <li class="nav-link"><a href="../html/index.html">HOME</a></li>
-                    <li class="nav-link"><a href="../html/queroDoar.html">ONG'S</a></li>
-                    <li class="nav-link"><a href="../html/quemSomos.html">SOBRE</a></li>
+                    <li class="nav-link"><a href="../html/pagina-quero-doar.html">ONG'S</a></li>
+                    <li class="nav-link"><a href="../html/sobre.html">SOBRE</a></li>
                     <li class="nav-link"><a href="../html/contato.html">CONTATO</a></li>
-                    <li class="nav-link btn-login"><a href="../html/login.html">LOGIN</a></li>
+                    <li class="nav-link"><a href="../html/login.html">LOGIN</a></li>
                 </ul>
             </div>
             <div class="user">
-                <a href="../html/login.html">
+                <a href="../html/configuracoes-doador.html">
                     <img class="img-user" src="../assets/user.png" alt="Usuário">
                 </a>
             </div>
         </nav>
     </header>
-    <main>
-        <section class="boxes">
-            <div class="box">
-                <h2 class="box-title">QUEM SOMOS?</h2>
-                <p>
-                    A Novo Começo é uma ONG intermediária que facilita o processo de doação entre ONGs e doadores, promovendo uma doação
-                    inteligente e eficiente. Com o objetivo de dar início a novos ciclos e ajudar pessoas em situações de vulnerabilidade, a
-                    Novo Começo conecta doadores a diversas causas, garantindo que as doações sejam direcionadas de forma transparente e
-                    impactante. A organização atua como um elo, simplificando o processo de doação e potencializando o alcance das
-                    iniciativas de solidariedade.
-                </p>
+    <div class="main-container">
+        <div class="pix-box">
+            <div class="pix-countdown">
+                <div class="pix-image">
+                    <div class="image-box"></div>
+                </div>
             </div>
-        </section>
-
-        <section class="boxes">
-            <div class="box">
-                <h2 class="box-title">POR QUE DOAR? </h2>
-                <p>
-                    Doar é um ato que vai além da ajuda financeira; é uma forma de transformar vidas e contribuir para um mundo melhor.
-                    Quando você doa, oferece a oportunidade de recomeço para aqueles que mais precisam, ajudando a suprir necessidades
-                    básicas, como alimentação, saúde, e educação. Além disso, a doação promove igualdade social, fortalece comunidades e
-                    inspira outras pessoas a fazerem o mesmo. É também uma forma de exercer empatia, solidariedade e responsabilidade
-                    social, gerando impacto positivo tanto para quem recebe quanto para quem doa. Cada contribuição, por menor que pareça,
-                    tem o poder de mudar destinos e criar um futuro mais justo e solidário.
-                </p>
+            <div class="countdown-box">
+                <p>PIX vence em: 00:00:00</p>
             </div>
-        </section>
-
-    </main>
-
+            <div>
+                <p>Chave Aleatória: dcta478j-196l-03fm-t6gh-4298er7845m2</p>
+            </div>
+        </div>
+        <div class="home-button" onclick="window.location.href=index.html">
+            <p>Voltar</p>
+        </div>
+    </div>
     <footer>
         <div class="footer">
             <div class="img-footer-start">
                 <img class="boneco-footer" class="img-footer" src="../assets/img-footer.png">
             </div>
-    
             <div class="socias">
                 <div class="icons-col-1">
                     <div class="social-footer">
-                        <img class="icon-footer" src="../assets/google.png">
+                        <img class="icon-footer" src="../assets/google.png"> 
                         <p>novocomeço@gmail.com</p>
                     </div>
                     <div class="social-footer">
@@ -109,7 +97,6 @@
             </div>
         </div>
     </footer>
-    
     <script src="../js/header.js"></script>
 </body>
 </html>
