--- a/html/transferir-para-ong.html
+++ b/html/transferir-para-ong.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Novo Começo</title>
+    <title>Doação ONG</title>
+    <link rel="shortcut icon" href="../assets/logo.png" type="Alegrinho">
     <link rel="stylesheet" href="../css/global.css">
-    <link rel="stylesheet" href="../css/confirmar_pagamento.css">
-
+    <link rel="stylesheet" href="../css/pagina-da-ong.css">
 </head>
 <body>
     <header>
@@ -33,37 +33,41 @@
                         </button>
                     </li>
                     <li class="nav-link"><a href="../html/index.html">HOME</a></li>
-                    <li class="nav-link"><a href="../html/queroDoar.html">ONG'S</a></li>
-                    <li class="nav-link"><a href="../html/quemSomos.html">SOBRE</a></li>
+                    <li class="nav-link"><a href="../html/pagina-quero-doar.html">ONG'S</a></li>
+                    <li class="nav-link"><a href="../html/sobre.html">SOBRE</a></li>
                     <li class="nav-link"><a href="../html/contato.html">CONTATO</a></li>
-                    <li class="nav-link btn-login"><a href="../html/login.html">LOGIN</a></li>
+                    <li class="nav-link"><a href="../html/login.html">LOGIN</a></li>
                 </ul>
             </div>
             <div class="user">
-                <a href="../html/login.html">
+                <a href="../html/configuracoes-doador.html">
                     <img class="img-user" src="../assets/user.png" alt="Usuário">
                 </a>
             </div>
         </nav>
     </header>
-    <div class="main-container">
-        <div class="pix-box">
-            <div class="pix-countdown">
-                <div class="pix-image">
-                    <div class="image-box"></div>
-                </div>
+    <main class="container">
+        <section class="donation-box">
+            <div class="ong-name">Nome da ONG</div>
+            <div class="donation-image">
+                <img src="../assets/ong.jpg" alt="Imagem da ONG">
+            </div>  
+            <div class="input-box">
+                <p>Nome:</p>
             </div>
-            <div class="countdown-box">
-                <p>PIX vence em: 00:00:00</p>
+            <div class="input-box">
+                <label for="valor">Valor (R$):</label>
+                <input type="number" id="valor" name="valor" placeholder="Digite o valor da transferência" required>
             </div>
-            <div>
-                <p>Chave Aleatória: dcta478j-196l-03fm-t6gh-4298er7845m2</p>
+            <p class="note">*Somente PIX</p>
+            <div class="confirm-button" onclick="window.location.href='confirmar_pagamento.html'">
+                <p>Confirmar doação</p>
             </div>
-        </div>
-        <div class="home-button" onclick="window.location.href=index.html">
-            <p>HOME</p>
-        </div>
-    </div>
+            <div class="cancel-button" onclick="window.location.href='queroDoar.html'">
+                <p>Cancelar doação</p>
+            </div>
+        </section>
+    </main>
     <footer>
         <div class="footer">
             <div class="img-footer-start">
@@ -72,7 +76,7 @@
             <div class="socias">
                 <div class="icons-col-1">
                     <div class="social-footer">
-                        <img class="icon-footer" src="../assets/google.png"> 
+                        <img class="icon-footer" src="../assets/google.png">
                         <p>novocomeço@gmail.com</p>
                     </div>
                     <div class="social-footer">
