--- a/html/cadastrar-ong.html
+++ b/html/cadastrar-ong.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Criar Conta - Novo Começo</title>
+    <link rel="shortcut icon" href="../assets/logo.png" type="Alegrinho">
     <link rel="stylesheet" href="../css/global.css">
-    <link rel="stylesheet" href="../css/styleRegister.css">
+    <link rel="stylesheet" href="../css/cadastrar.css">
 </head>
 <body>
     <header>
@@ -32,14 +33,14 @@
                         </button>
                     </li>
                     <li class="nav-link"><a href="../html/index.html">HOME</a></li>
-                    <li class="nav-link"><a href="../html/queroDoar.html">ONG'S</a></li>
-                    <li class="nav-link"><a href="../html/quemSomos.html">SOBRE</a></li>
+                    <li class="nav-link"><a href="../html/pagina-quero-doar.html">ONG'S</a></li>
+                    <li class="nav-link"><a href="../html/sobre.html">SOBRE</a></li>
                     <li class="nav-link"><a href="../html/contato.html">CONTATO</a></li>
-                    <li class="nav-link btn-login"><a href="../html/login.html">LOGIN</a></li>
+                    <li class="nav-link"><a href="../html/login.html">LOGIN</a></li>
                 </ul>
             </div>
             <div class="user">
-                <a href="../html/login.html">
+                <a href="../html/configuracoes-doador.html">
                     <img class="img-user" src="../assets/user.png" alt="Usuário">
                 </a>
             </div>
@@ -48,7 +49,7 @@
     <div class="container">
         <section class="register-section">
             <h1>Criar conta</h1>
-            <p>Use o seu email para se registrar</p>
+            <p>Use o seu email para se registrar sua ONG</p>
             <form action="/register" method="POST">
                 <div class="input-group">
                     <input type="text" id="name" name="name" placeholder="Nome" required>
@@ -63,7 +64,16 @@
                     <input type="tel" id="phone" name="phone" placeholder="Telefone" required>
                 </div>
                 <div class="input-group">
-                    <input type="text" id="cpf" name="cpf" placeholder="CPF" required>
+                    <input type="text" id="cpf" name="cpf" placeholder="CNPJ" required>
+                </div>
+                <div class="input-group">
+                    <input type="text" id="constituicao" name="constituicao" placeholder="Constituição" required>
+                </div>
+                <div class="input-group">
+                    <input type="text" id="comprobatorio" name="comprobatorio" placeholder="Comprobatório" required>
+                </div>
+                <div class="input-group">
+                    <input type="text" id="estatuto" name="estatuto" placeholder="Estatuto Social" required>
                 </div>
                 <div class="input-group">
                     <input type="text" id="logradouro" name="logradouro" placeholder="Logradouro" required>
@@ -82,6 +92,15 @@
                 </div>
                 <div class="input-group">
                     <input type="text" id="estado" name="estado" placeholder="Estado" required>
+                </div>
+                <div class="input-group">
+                    <input type="text" id="bank_account" name="bank_account" placeholder="Conta Bancária" required>
+                </div>
+                <div class="input-group">
+                    <input type="text" id="current_account" name="current_account" placeholder="Conta Corrente" required>
+                </div>
+                <div class="input-group">
+                    <input type="text" id="pix_key" name="pix_key" placeholder="Chave Pix" required>
                 </div>
                 <button type="submit" class="register-button">Criar conta</button>
             </form>
