--- a/html/historico-transferencia-adm.html
+++ b/html/historico-transferencia-adm.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doação ONG</title>
+    <title>Histórico de Transferencia</title>
+    <link rel="shortcut icon" href="../assets/logo.png" type="Alegrinho">
     <link rel="stylesheet" href="../css/global.css">
-    <link rel="stylesheet" href="../css/esc_ong.css">
+    <link rel="stylesheet" href="../css/historicos.css">
 </head>
 <body>
     <header>
@@ -32,36 +33,59 @@
                         </button>
                     </li>
                     <li class="nav-link"><a href="../html/index.html">HOME</a></li>
-                    <li class="nav-link"><a href="../html/queroDoar.html">ONG'S</a></li>
-                    <li class="nav-link"><a href="../html/quemSomos.html">SOBRE</a></li>
+                    <li class="nav-link"><a href="../html/pagina-quero-doar.html">ONG'S</a></li>
+                    <li class="nav-link"><a href="../html/sobre.html">SOBRE</a></li>
                     <li class="nav-link"><a href="../html/contato.html">CONTATO</a></li>
-                    <li class="nav-link btn-login"><a href="../html/login.html">LOGIN</a></li>
+                    <li class="nav-link"><a href="../html/login.html">LOGIN</a></li>
                 </ul>
             </div>
             <div class="user">
-                <a>
+                <a href="../html/configuracoes-doador.html">
                     <img class="img-user" src="../assets/user.png" alt="Usuário">
                 </a>
             </div>
         </nav>
     </header>
     <div class="container">
+        <h1 class="title">Histórico de Transferência</h1>
+        <div class="filter-options">
+            <select id="filter-ong">
+            <option value="all">Filtros</option>
+            <option value="ong1">ONG 1</option>
+            <option value="ong2">ONG 2</option>
+            <option value="ong3">ONG 3</option>
+            </select>
+        </div>
         <div class="donation-box">
-            <div class="donation-image">
-                <p>IMAGEM DA ONG QUE<br>RECEBERÁ A DOAÇÃO</p>
+            <div class="circle">
+                <p>ONG: xxx</p>
             </div>
-            <div class="input-box">
-                <p>NOME:</p>
+            <div class="donation-details">
+                <p>Doação para a ONG xxx</p>
+                <p>Data de doação: xx/xx/xxxx</p>
+                <p>Valor da doação: R$ xxx,xx</p>
             </div>
-            <div class="input-box">
-                <p>VALOR:</p>
+        </div>
+    
+        <div class="donation-box">
+            <div class="circle">
+                <p>ONG: xxx</p>
             </div>
-            <p class="note">OBS: SOMENTE PIX</p>
-            <div class="confirm-button" onclick="window.location.href='confirmar_pagamento.html'">
-                <p>CONFIRMAR DOAÇÃO</p>
+            <div class="donation-details">
+                <p>Doação para a ONG xxx</p>
+                <p>Data de doação: xx/xx/xxxx</p>
+                <p>Valor da doação: R$ xxx,xx</p>
             </div>
-            <div class="cancel-button" onclick="window.location.href='queroDoar.html'">
-                <p>CANCELAR DOAÇÃO</p>
+        </div>
+
+        <div class="donation-box">
+            <div class="circle">
+                <p>ONG: xxx</p>
+            </div>
+            <div class="donation-details">
+                <p>Doação para a ONG xxx</p>
+                <p>Data de doação: xx/xx/xxxx</p>
+                <p>Valor da doação: R$ xxx,xx</p>
             </div>
         </div>
     </div>
