--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Novo Começo</title>
+    <link rel="shortcut icon" href="../assets/logo.png" type="Alegrinho">
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/index.css">
 </head>
@@ -33,14 +34,14 @@
                         </button>
                     </li>
                     <li class="nav-link"><a href="../html/index.html">HOME</a></li>
-                    <li class="nav-link"><a href="../html/queroDoar.html">ONG'S</a></li>
-                    <li class="nav-link"><a href="../html/quemSomos.html">SOBRE</a></li>
+                    <li class="nav-link"><a href="../html/pagina-quero-doar.html">ONG'S</a></li>
+                    <li class="nav-link"><a href="../html/sobre.html">SOBRE</a></li>
                     <li class="nav-link"><a href="../html/contato.html">CONTATO</a></li>
-                    <li class="nav-link btn-login"><a href="../html/login.html">LOGIN</a></li>
+                    <li class="nav-link"><a href="../html/login.html">LOGIN</a></li>
                 </ul>
             </div>
             <div class="user">
-                <a href="../html/login.html">
+                <a href="../html/configuracoes-doador.html">
                     <img class="img-user" src="../assets/user.png" alt="Usuário">
                 </a>
             </div>
@@ -55,9 +56,9 @@
                         <span class="tittle-banner">NOVO</span>
                     </div>
                     <div class="a">
-                        <a class="btn-quero-doar" href="queroDoar.html">QUERO DOAR!</a>
+                        <a class="btn-quero-doar" href="pagina-quero-doar.html">QUERO DOAR!</a>
                     </div>
-                </div>
+                </div>  
                 <div>
                     <span class="tittle-banner">COMEÇO</span>
                 </div>
@@ -73,41 +74,38 @@
         <section class="banner-cards-ongs">
             <div class="card-ong">
                 <img class="img-ong" src="../assets/amigosdaterra.png">
-                <a class="btn-conhecer">CONHECER</a>
+                <a class="btn-conhecer" href="pagina-da-ong.html">Saiba Mais</a>
             </div>
             <div class="card-ong">
                 <img class="img-ong" src="../assets/amoranimal.gif">
-                <a class="btn-conhecer">CONHECER</a>
+                <a class="btn-conhecer" href="pagina-da-ong.html">Saiba Mais</a>
             </div>
             <div class="card-ong">
                 <img class="img-ong" src="../assets/maoamiga.png">
-                <a class="btn-conhecer">CONHECER</a>
-            </iv>
+                <a class="btn-conhecer" href="pagina-da-ong.html">Saiba Mais</a>
+            </div>
         </section>
 
         <section class="banner-cards-clientes">
             <div class="card-doador">
-                <div>
-                    
-                </div>
                 <p>
-                    "A solidariedade é um ato poderoso que transforma vidas. Contribuir com amor e compaixão é um pequeno gesto que pode
-                    criar um impacto enorme!"<br>Cesar Yoshio
+                    "A solidariedade é um ato poderoso que transforma vidas. Contribuir com amor e compaixão é um pequeno gesto que pode criar um impacto enorme!"
+                    <span class="autor">Cesar Yoshio</span>
+                </p>
+            </div>            
+            <div class="card-doador">
+                <p>
+                    "A solidariedade é um ato poderoso que transforma vidas. Contribuir com amor e compaixão é um pequeno gesto que pode criar um impacto enorme!"
+                    <span class="autor">Cesar Yoshio</span>
                 </p>
             </div>
             <div class="card-doador">
                 <p>
-                    A doação é uma maneira simples de espalhar esperança. Saber que minha contribuição pode mudar uma vida me motiva a
-                    continuar ajudando!"<br>Tiago Gorri
-                </p>
-
-            </div>
-            <div class="card-doador">
-                <p>
-                    "Ao ajudar o próximo, plantamos sementes de esperança. Cada doação traz um pouco mais de luz e faz a diferença no
-                    caminho de alguém."<br>Matheus Muller
+                    "A solidariedade é um ato poderoso que transforma vidas. Contribuir com amor e compaixão é um pequeno gesto que pode criar um impacto enorme!"
+                    <span class="autor">Cesar Yoshio</span>
                 </p>
             </div>
+            
         </section>
     </main>
 
