--- a/html/login.html
+++ b/html/login.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Novo Começo</title>
+    <link rel="shortcut icon" href="../assets/logo.png" type="Alegrinho">
     <link rel="stylesheet" href="../css/global.css">
-    <link rel="stylesheet" href="../css/styleLogin.css">
+    <link rel="stylesheet" href="../css/login.css">
 </head>
 <body>
     <header>
@@ -32,14 +33,14 @@
                         </button>
                     </li>
                     <li class="nav-link"><a href="../html/index.html">HOME</a></li>
-                    <li class="nav-link"><a href="../html/queroDoar.html">ONG'S</a></li>
-                    <li class="nav-link"><a href="../html/quemSomos.html">SOBRE</a></li>
+                    <li class="nav-link"><a href="../html/pagina-quero-doar.html">ONG'S</a></li>
+                    <li class="nav-link"><a href="../html/sobre.html">SOBRE</a></li>
                     <li class="nav-link"><a href="../html/contato.html">CONTATO</a></li>
-                    <li class="nav-link btn-login"><a href="../html/login.html">LOGIN</a></li>
+                    <li class="nav-link"><a href="../html/login.html">LOGIN</a></li>
                 </ul>
             </div>
             <div class="user">
-                <a href="../html/login.html">
+                <a href="../html/configuracoes-doador.html">
                     <img class="img-user" src="../assets/user.png" alt="Usuário">
                 </a>
             </div>
@@ -61,13 +62,13 @@
                     <input type="checkbox" id="remember" name="remember">
                     <label for="remember">Lembrar de mim</label>
                 </div>
-                <a href="esqueceuSenha.html">Esqueceu a senha?</a>
+                <a href="alterar-senha-doador.html">Esqueceu a senha?</a>
             </div>
             <button type="submit" class="login-button">Entrar</button>
         </form>
         <div class="register">
-            <span>Não tem uma conta?</span> <a href="register.html">Criar conta Doador</a>
-            <span>Não tem uma conta?</span> <a href="registerONG.html">Criar conta ONG</a>
+            <span>Não tem uma conta?</span> <a href="cadastrar-doador.html">Criar conta Doador</a>
+            <span>Não tem uma conta?</span> <a href="cadastrar-ong.html">Criar conta ONG</a>
         </div>
     </section>
         <footer>
