--- a/html/mudar-senha.html
+++ b/html/mudar-senha.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alterar Senha - Novo Começo</title>
+    <link rel="shortcut icon" href="../assets/logo.png" type="Alegrinho">
     <link rel="stylesheet" href="../css/global.css">
-    <link rel="stylesheet" href="../css/mudar_senha.css">
+    <link rel="stylesheet" href="../css/mudar-senha.css">
 </head>
 <body>
     <header>
@@ -32,39 +33,42 @@
                         </button>
                     </li>
                     <li class="nav-link"><a href="../html/index.html">HOME</a></li>
-                    <li class="nav-link"><a href="../html/queroDoar.html">ONG'S</a></li>
-                    <li class="nav-link"><a href="../html/quemSomos.html">SOBRE</a></li>
+                    <li class="nav-link"><a href="../html/pagina-quero-doar.html">ONG'S</a></li>
+                    <li class="nav-link"><a href="../html/sobre.html">SOBRE</a></li>
                     <li class="nav-link"><a href="../html/contato.html">CONTATO</a></li>
-                    <li class="nav-link btn-login"><a href="../html/login.html">LOGIN</a></li>
+                    <li class="nav-link"><a href="../html/login.html">LOGIN</a></li>
                 </ul>
             </div>
             <div class="user">
-                <a href="../html/login.html">
+                <a href="../html/configuracoes-doador.html">
                     <img class="img-user" src="../assets/user.png" alt="Usuário">
                 </a>
             </div>
         </nav>
     </header>
-    <section class="password-change-section">
-        <form action="/alterar-senha" method="POST">
-            <div class="input-group">
-                <label for="current-password">Senha Atual</label>
-                <input type="password" id="current-password" name="current-password" placeholder="Digite sua senha atual" required>
-            </div>
-            <div class="input-group">
-                <label for="new-password">Nova Senha</label>
-                <input type="password" id="new-password" name="new-password" placeholder="Digite sua nova senha" required>
-            </div>
-            <div class="input-group">
-                <label for="confirm-password">Confirmar Senha</label>
-                <input type="password" id="confirm-password" name="confirm-password" placeholder="Confirme sua nova senha" required>
-            </div>
-            <div class="action-buttons">
-                <button type="submit" class="action-button">Confirmar</button>
-                <button type="reset" class="action-button">Limpar </button>
-            </div>
-        </form>
-    </section>
+    <main>
+        <h1 class="title">Mudar Senha</h1>
+        <section class="password-change-section">
+            <form action="/alterar-senha" method="POST">
+                <div class="input-group">
+                    <label for="current-password">Senha Atual</label>
+                    <input type="password" id="current-password" name="current-password" placeholder="Digite sua senha atual" required>
+                </div>
+                <div class="input-group">
+                    <label for="new-password">Nova Senha</label>
+                    <input type="password" id="new-password" name="new-password" placeholder="Digite sua nova senha" required>
+                </div>
+                <div class="input-group">
+                    <label for="confirm-password">Confirmar Senha</label>
+                    <input type="password" id="confirm-password" name="confirm-password" placeholder="Confirme sua nova senha" required>
+                </div>
+                <div class="action-buttons">
+                    <button type="submit" class="action-button">Confirmar</button>
+                    <button type="reset" class="action-button">Limpar </button>
+                </div>
+            </form>
+        </section>
+    </main>
         <footer>
             <div class="footer">
                 <div class="img-footer-start">
