--- a/html/pagina-quero-doar.html
+++ b/html/pagina-quero-doar.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../assets/logo.png" type="Alegrinho">
     <link rel="stylesheet" href="../css/global.css">
-    <link rel="stylesheet" href="../css/queroDoar.css">
+    <link rel="stylesheet" href="../css/pagina-quero-doar.css">
     <title>Novo Começo</title>
 </head>
 <body>
@@ -33,14 +34,14 @@
                         </button>
                     </li>
                     <li class="nav-link"><a href="../html/index.html">HOME</a></li>
-                    <li class="nav-link"><a href="../html/queroDoar.html">ONG'S</a></li>
-                    <li class="nav-link"><a href="../html/quemSomos.html">SOBRE</a></li>
+                    <li class="nav-link"><a href="../html/pagina-quero-doar.html">ONG'S</a></li>
+                    <li class="nav-link"><a href="../html/sobre.html">SOBRE</a></li>
                     <li class="nav-link"><a href="../html/contato.html">CONTATO</a></li>
-                    <li class="nav-link btn-login"><a href="../html/login.html">LOGIN</a></li>
+                    <li class="nav-link"><a href="../html/login.html">LOGIN</a></li>
                 </ul>
             </div>
             <div class="user">
-                <a href="../html/login.html">
+                <a href="../html/configuracoes-doador.html">
                     <img class="img-user" src="../assets/user.png" alt="Usuário">
                 </a>
             </div>
@@ -58,8 +59,7 @@
                         <img class="img-card" src="../assets/banner-ongs.png">
                     </div>
                     <div class="btns-card">
-                        <a class="btn-card" href="esc_ong.html">DOAR</a>
-                        <a class="btn-card" href="saibaMais.html">SAIBA MAIS</a>
+                        <a class="btn-card" href="pagina-da-ong.html">Doar</a>
                     </div>
                 </div>
                 <div class="ong">
@@ -67,8 +67,7 @@
                         <img class="img-card" src="../assets/banner-ongs.png">
                     </div>
                     <div class="btns-card">
-                        <a class="btn-card" href="esc_ong.html">DOAR</a>
-                        <a class="btn-card" href="saibaMais.html">SAIBA MAIS</a>
+                        <a class="btn-card" href="pagina-da-ong.html">Doar</a>
                     </div>
                 </div>
                 <div class="ong">
@@ -76,8 +75,7 @@
                         <img class="img-card" src="../assets/banner-ongs.png">
                     </div>
                     <div class="btns-card">
-                        <a class="btn-card" href="esc_ong.html">DOAR</a>
-                        <a class="btn-card" href="saibaMais.html">SAIBA MAIS</a>
+                        <a class="btn-card" href="pagina-da-ong.html">Doar</a>
                     </div>
                 </div>
                 <div class="ong">
@@ -85,8 +83,7 @@
                         <img class="img-card" src="../assets/banner-ongs.png">
                     </div>
                     <div class="btns-card">
-                        <a class="btn-card" href="esc_ong.html">DOAR</a>
-                        <a class="btn-card" href="saibaMais.html">SAIBA MAIS</a>
+                        <a class="btn-card" href="pagina-da-ong.html">Doar</a>
                     </div>
                 </div>
                 <div class="ong">
@@ -94,8 +91,7 @@
                         <img class="img-card" src="../assets/banner-ongs.png">
                     </div>
                     <div class="btns-card">
-                        <a class="btn-card" href="esc_ong.html">DOAR</a>
-                        <a class="btn-card" href="saibaMais.html">SAIBA MAIS</a>
+                        <a class="btn-card" href="pagina-da-ong.html">Doar</a>
                     </div>
                 </div>
                 <div class="ong">
@@ -103,8 +99,7 @@
                         <img class="img-card" src="../assets/banner-ongs.png">
                     </div>
                     <div class="btns-card">
-                        <a class="btn-card" href="esc_ong.html">DOAR</a>
-                        <a class="btn-card" href="saibaMais.html">SAIBA MAIS</a>
+                        <a class="btn-card" href="pagina-da-ong.html">Doar</a>
                     </div>
                 </div>
             </div>
