--- a/html/cadastrar-doador.html
+++ b/html/cadastrar-doador.html
@@ -49,7 +49,7 @@
     <div class="container">
         <section class="register-section">
             <h1>Criar conta</h1>
-            <p>Use o seu email para se registrar</p>
+            <p>Crie sua conta e ajude próximo!</p>
             <form action="/register" method="POST">
                 <div class="input-group">
                     <input type="text" id="name" name="name" placeholder="Nome" required>
