--- a/html/login.html
+++ b/html/login.html
@@ -54,7 +54,7 @@
                 <input type="email" id="email" name="email" placeholder="Email" required>
             </div>
             <div class="input-group">
-                <label for="password">Senha</label>
+                <label for="password">Senha <a href="alterar-senha-doador.html">(Esqueceu a senha?)</a></label>
                 <input type="password" id="password" name="password" placeholder="Senha" required>
             </div>
             <div class="remember-forgot">
@@ -62,13 +62,13 @@
                     <input type="checkbox" id="remember" name="remember">
                     <label for="remember">Lembrar de mim</label>
                 </div>
-                <a href="alterar-senha-doador.html">Esqueceu a senha?</a>
             </div>
             <button type="submit" class="login-button">Entrar</button>
         </form>
         <div class="register">
-            <span>Não tem uma conta?</span> <a href="cadastrar-doador.html">Criar conta Doador</a>
-            <span>Não tem uma conta?</span> <a href="cadastrar-ong.html">Criar conta ONG</a>
+            <br><span>Não tem uma conta? Crie agora!</span><br>
+            <br><a href="cadastrar-doador.html">Criar conta de Doador</a><br>
+            <a href="cadastrar-ong.html">Criar conta para ONG</a>
         </div>
     </section>
         <footer>
