Correção da página login e home. Adição do sistema de login e conexão com o banco

--- a/html/contato.html
+++ b/html/contato.html
@@ -57,7 +57,7 @@
                     <input class="input" type="text" placeholder="Nome:" id="name"> 
                 </div>
                 <div>
-                    <input class="input" type="text" placeholder="E-mail:" id="email">
+                    <input class="input" type="email" placeholder="E-mail:" id="email">
                 </div>
                 <div>
                     <textarea class="text-area" placeholder="Mensagem:" id="mensagem"></textarea>
